[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tssl"
version = "0.1.0"
description = "Funções de sinais e sistemas (Série de Fourier)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Diego" }]
license = "MIT"
keywords = ["signals", "systems", "fourier", "dsp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
plot = ["matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
